# probabilities-lab-5

./: CMakeLists.txt  ProbabilitiesLab5.cpp
samples/: chudesenko_36.10.json  chudesenko_37.10.json  chudesenko_38.10.json  exponential100.json  exponential10000.json  hypergeometric100.json  hypergeometric10000.json  normal100.json  normal10000.json  poisson100.json  poisson10000.json  poisson100000000.json  testSample.json  testSample2.json
